--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -79,11 +79,11 @@ Bei den \textit{Einfachen Projekten} sind relativ kleine Teams am Entwicklungspr
 Bei den \textit{Komplexen Projekten} handelt es sich um Software-Projekte, welche in den meisten Fällen stark durch behördliche Auflagen reguliert sind. Die Software muss einerseits eine hohe Zuverlässigkeit aufweisen und andererseits sind nachträgliche Änderungen fast nicht mehr möglich. Im Gegensatz zu den \textit{Einfachen Projekten} ist das Entwicklungsteam hier groß, besteht sowohl aus erfahrenen, als auch aus unerfahrenen Entwicklern und die Anzahl der Code-Zeilen ist ebenfalls groß \cite{Boehm81, Hanser2010}. \newline
 Eine Schnittstelle zwischen diesen beiden Projekttypen bilden die \textit{Mittelschweren Projekte}. Hier sind die Software-Entwicklungsteams mittelgroß und bestehen aus erfahrenen und unerfahrenen Mitgliedern. Teilweise sind nicht alle Aspekte des Produktes schon im Vornherein bekannt und die Anzahl der Code-Zeilen ist groß \cite{Boehm81, Hanser2010}.
 
-\subsection{Schwergewichtige und leichtgewichtige Prozessmodelle}
+\subsection{Schwergewichtige und Leichtgewichtige Prozessmodelle}
 
-Aus der eben erfolgten Einteilung von Software-Projekten lässt sich eine Einteilung von Software-Prozessmodellen in \textit{leichtgewichtige} und \textit{schwergewichtige Prozessmodelle} ableiten \cite{Hanser2010}. \newline
-\textit{Leichtgewichtige Prozessmodelle} eignen sich eher für kleine Teams, bei denen keine detaillierte Anforderungserhebung stattfindet, da die Kommunikation sowohl innerhalb des Teams, als auch mit dem Kunden auf Grund der kleinen Teamgröße gut funktioniert. Da viele Informationen hier informell über kurze Kommunikationswege weitergegeben werden, ist eine ausführliche Dokumentation derer nicht notwendig. Der Einsatz von \textit{leichtgewichtigen Prozessmodellen} eignet sich sehr gut für \textit{einfache Projekte} und teilweise auch für \textit{mittelschwere Projekte}\cite{Hanser2010}. \newline
-Eine sehr formale und dokumentenlastige Vorgehensweise kommt bei den \textit{schwergewichtigen Prozessmodellen} zum Einsatz. Es findet eine ausführliche Dokumentation in allen Entwicklungsphasen statt und der Ablauf des Prozesses ist genau vorgegeben. Bei Software-Produkten, welche bei einer möglichen Fehlfunktion Menschenleben in Gefahr bringen, ist beispielsweise eine Vorgehensweise mit einem \textit{schwergewichtigen Prozessmodell} sinnvoll. Ihr Einsatz ist besonders in \textit{schweren Projekten} vorzuziehen, aber auch in \textit{mittelschweren Projekten} \cite{Hanser2010}. \newline
+Aus der eben erfolgten Einteilung von Software-Projekten lässt sich eine Einteilung von Software-Prozessmodellen in \textit{Leichtgewichtige} und \textit{Schwergewichtige Prozessmodelle} ableiten \cite{Hanser2010}. \newline
+\textit{Leichtgewichtige Prozessmodelle} eignen sich eher für kleine Teams, bei denen keine detaillierte Anforderungserhebung stattfindet, da die Kommunikation sowohl innerhalb des Teams, als auch mit dem Kunden auf Grund der kleinen Teamgröße gut funktioniert. Da viele Informationen hier informell über kurze Kommunikationswege weitergegeben werden, ist eine ausführliche Dokumentation derer nicht notwendig. Der Einsatz von \textit{Leichtgewichtigen Prozessmodellen} eignet sich sehr gut für \textit{Einfache Projekte} und teilweise auch für \textit{Mittelschwere Projekte} \cite{Hanser2010}. \newline
+Eine sehr formale und dokumentenlastige Vorgehensweise kommt bei den \textit{Schwergewichtigen Prozessmodellen} zum Einsatz. Es findet eine ausführliche Dokumentation in allen Entwicklungsphasen statt und der Ablauf des Prozesses ist genau vorgegeben. Bei Software-Produkten, welche bei einer möglichen Fehlfunktion Menschenleben in Gefahr bringen, ist beispielsweise eine Vorgehensweise mit einem \textit{Schwergewichtigen Prozessmodell} sinnvoll. Ihr Einsatz ist besonders in \textit{Schweren Projekten} vorzuziehen, aber auch in \textit{Mittelschweren Projekten} \cite{Hanser2010}. \newline
 
 
 
