--- a/Masterarbeit 4/Tex/chapter4.tex
+++ b/Masterarbeit 4/Tex/chapter4.tex
@@ -12,17 +12,17 @@ Abbildung \ref{fig:Signavio} zeigt den \textit{Signavio Process Editor}.
 \begin{figure}[H]
 \begin{center}
   \includegraphics[scale=0.6]{Signavio} %pdf, jpg, png...
-  \caption{Siganvio Process Editor}
+  \caption{Siganvio Process Editor (Screenshot Siganvio)}
   \label{fig:Signavio}
 \end{center}
 \end{figure} 
 
 Links ist die BPMN Palette zu sehen. Die einzelnen Elemente können per \textit{Drag and Drop} in das Arbeitsdokument gezogen werden. Signavio verfügt über Modellierungskonventionen. Mit diesen ist es  möglich, das Modell auf die Einhaltung von Modellierungsrichtlinien, wie z.B. Notationsumfang, Benennung, Prozessstruktur und Diagrammlayout zu überprüfen. Die Modelle können alle als PDF exportiert werden. \newline
-In Abbildung \ref{fig:Simulation} ist die Simulations-Sicht von Signavio zu sehen. Hier kann der Benutzer den Prozessablauf simulieren. Dies kann einerseits mit Benutzerinteraktion Schritt für Schritt erfolgen oder auch im Ganzen durch den Simulator gesteuert wobei XOR-Verzweigungen nach wie vor vom Benutzer ausgewählt werden müssen.
+In Abbildung \ref{fig:Simulation} ist die Simulations-Sicht von Signavio zu sehen. Hier kann der Benutzer den Prozessablauf simulieren. Dies kann einerseits mit Benutzerinteraktion Schritt für Schritt erfolgen oder auch im Ganzen durch den Simulator gesteuert werden, wobei XOR-Verzweigungen nach wie vor vom Benutzer ausgewählt werden müssen.
 \begin{figure}[H]
 \begin{center}
   \includegraphics[scale=0.6]{Simulation} %pdf, jpg, png...
-  \caption{Siganvio Simulation}
+  \caption{Siganvio Simulation (Screenshot Signavio)}
   \label{fig:Simulation}
 \end{center}
 \end{figure} 
