--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -12,6 +12,7 @@ Zum einen sollen die imperativen und deklarativen Modellierungssprachen im Hinbl
 
 \subsubsection{Klarheit}
 Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt. Insbesondere soll hier bei den imperativen Modellen die Anzahl an Verbindungen bzw. bei den deklarativen Modellen die Anzahl an Constraints zwischen Aktivitäten verglichen werden, da sich diese mit steigender Anzahl negativ auf die Verständlichkeit auswirken.\newline
+Hier soll auch insbesondere die Anzahl unterschiedlicher Verbindungselemente betrachtet werden. Bei BPMN werden hier unterschiedliche Gateways und der Sequenzfluss als unterschiedliche Verbindungselemente betrachtet. Bei ConDec werden unterschiedliche Constraints als unterschiedliche Verbindungselemente betrachtet. Da alle Gateways in BPMN und alle Constraints in ConDec eine unterschiedliche Sematik haben und diese jeweils verstanden werden muss, kann sich eine hohe Anzahl an verschieden Gateways, bzw. Constraints negtiv auf die verständlichkeit auswirken \cite{thesis_maja, koch2011,bpm07}. Auch wird hier bei ConDec noch die Komplexität der Constraints betrachtet. Denn Existence-Constraints haben eine geringere Komplexität als Realtion Constraints.\newline
 Weiterhin soll hier untersucht werden, ob es wesentliche Unterschiede in der Verständlichkeit der imperativen und deklarativen Prozessmodelle gibt, in Abhängigkeit der Größe des zugrunde liegenden Software-Engineering Prozessmodells. Hierbei kann die Eignung der jeweiligen Modellierungssprache sehr gut festgestellt werden, da sie im Falle von schwerer/fehlender Verständlichkeit nicht zum Modellieren geeignet ist. Falls es Unterschiede in der Verständlichkeit der Prozessmodelle in Abhängigkeit der Größe des zugrunde liegenden Metamodells gibt, lassen sich hierbei Rückschlüsse auf die Eignung der Prozessmodellierungssprache in Bezug auf große/kleine Metamodelle ziehen.
 \subsubsection{Richtigkeit}
 Die Richtigkeit der Prozessmodelle soll ebenfalls verglichen werden. Hierbei soll die semantische und syntaktische Richtigkeit der Prozessmodelle untersucht werden.
